--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -39,3 +39,9 @@ security:
     access_control:
         # - { path: ^/admin, roles: ROLE_ADMIN }
         # - { path: ^/profile, roles: ROLE_USER }
+
+    role_hierarchy:
+        ROLE_IMPORT: ROLE_USER
+        ROLE_WRITER: [ROLE_USER, ROLE_IMPORT]
+        ROLE_MODERATOR: ROLE_USER
+        ROLE_ADMIN: [ROLE_WRITER, ROLE_MODERATOR]
