The look of import-picture page is done

--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -54,3 +54,15 @@ edit_user:
 #--------------------------------------------------
 # End of SecurityController's routes
 #--------------------------------------------------
+
+#--------------------------------------------------
+# Start of ImportController's routes
+#--------------------------------------------------
+import_picture:
+    path: /import-picture/{page}
+    controller: App\Controller\ImportController::importPicture
+    defaults:
+        page: 1
+    requirements: 
+        page: '\d+'
+
