--- a/config/services.yaml
+++ b/config/services.yaml
@@ -5,6 +5,7 @@
 # https://symfony.com/doc/current/best_practices/configuration.html#application-related-configuration
 parameters:
     profil_pic_dir: '%kernel.project_dir%/public/images/profile_pictures'
+    imported_image_dir: '%kernel.project_dir%/public/images/imported'
 
 services:
     # default configuration for services in *this* file
