--- a/package.json
+++ b/package.json
@@ -15,5 +15,11 @@
         "dev": "encore dev",
         "watch": "encore dev --watch",
         "build": "encore production --progress"
+    },
+    "dependencies": {
+        "react": "^17.0.1",
+        "react-dom": "^17.0.1",
+        "slate": "^0.59.0",
+        "slate-react": "^0.59.0"
     }
 }
