--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "react": "^17.0.1",
         "react-dom": "^17.0.1",
         "slate": "^0.59.0",
+        "slate-history": "^0.59.0",
         "slate-react": "^0.59.0"
     }
 }
