Wired the form return to fill the modified entity

--- a/config/validator/validation.yaml
+++ b/config/validator/validation.yaml
@@ -1,1 +1,4 @@
 # config/validator/validation.yaml
+App\Entity\Article:
+    constraints:
+        - Symfony\Bridge\Doctrine\Validator\Constraints\UniqueEntity: pathTitle
