Updated to Symfony 5.3

--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -1,9 +1,6 @@
 security:
-    encoders:
-        App\Entity\User:
-            algorithm: auto
-
-
+    # https://symfony.com/doc/current/security/experimental_authenticators.html
+    enable_authenticator_manager: true
     # https://symfony.com/doc/current/security.html#where-do-users-come-from-user-providers
     providers:
         # used to reload user from session & other features (e.g. switch_user)
@@ -12,12 +9,17 @@ security:
                 class: App\Entity\User
                 property: username
         # used to reload user from session & other features (e.g. switch_user)
+    password_hashers:
+        # use your user class name here
+        App\Entity\User:
+            # Use native password hasher, which auto-selects the best
+            # possible hashing algorithm (starting from Symfony 5.3 this is "bcrypt")
+            algorithm: auto
     firewalls:
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
         main:
-            anonymous: true
             lazy: true
             provider: app_user_provider
             guard:
