Changed the edit/add form for articles. Added an add button on the article page and a add article page

--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -56,6 +56,10 @@ user_blog_post:
 #--------------------------------------------------
 # Start of ArticleController's routes
 #--------------------------------------------------
+add_page:
+  path: /pages/add
+  controller: App\Controller\ArticleController::addPage
+
 page:
   path: /pages/{pathTitle}
   controller: App\Controller\ArticleController::showPage
