--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -42,6 +42,14 @@ user_blog:
     requirements: 
         page: '\d+'
 
+user_blog_edit:
+  path: /blog-post/edit/{blogId}
+  controller: App\Controller\BlogController::EditBlogPost
+  defaults:
+    blogId: 1
+  requirements: 
+    blogId: '\d+'
+
 user_blog_post:
     path: /blog-post/{blogId}
     controller: App\Controller\BlogController::ShowBlogId
@@ -49,6 +57,7 @@ user_blog_post:
         blogId: 1
     requirements: 
         blogId: '\d+'
+
 #--------------------------------------------------
 # End of BlogController's routes
 #--------------------------------------------------
