Added edit button under blog posts and changed the BlogPost's content to be json instead of string

--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -43,7 +43,7 @@ user_blog:
         page: '\d+'
 
 user_blog_edit:
-  path: /blog-post/edit/{blogId}
+  path: /blog-post/{blogId}/edit
   controller: App\Controller\BlogController::EditBlogPost
   defaults:
     blogId: 1
