Made ajax query to show the thumbnail and the page header change when editing an article

--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -80,6 +80,15 @@ page:
 edit:
   path: /pages/{pathTitle}/edit
   controller: App\Controller\ArticleController::editPage
+
+get_image_path_in_page_edit_ajax:
+  path: /images/{imageId}
+  controller: App\Controller\ArticleController::GetImageLink
+  methods: POST
+  defaults:
+    imageId: 0
+  requirements:
+    imageId: '\d+'
 #--------------------------------------------------
 # End of ArticleControllers routes
 #--------------------------------------------------
@@ -139,3 +148,5 @@ about_user:
 #--------------------------------------------------
 # End of About's routes
 #--------------------------------------------------
+
+
