--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -89,6 +89,11 @@ get_image_path_in_page_edit_ajax:
     imageId: 0
   requirements:
     imageId: '\d+'
+
+search_ajax:
+  path: /pages/search/{searchWord}
+  controller: App\Controller\ArticleController::SearchArticle
+  methods: POST
 #--------------------------------------------------
 # End of ArticleControllers routes
 #--------------------------------------------------
