--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,3 +1,7 @@
+app_logout:
+  path: /logout
+  methods: GET
+
 #--------------------------------------------------
 # Start of HomeController's routes
 #--------------------------------------------------
@@ -113,13 +117,18 @@ search_ajax:
 #--------------------------------------------------
 
 #--------------------------------------------------
-# Start of SecurityController's routes
+# Start of LoginController's routes
 #--------------------------------------------------
+login:
+  path: /login
+  controller: App\Controller\LoginController::index
+
+
 edit_user:
   path: /modify-account
   controller: App\Controller\SecurityController::editUserSelf
 #--------------------------------------------------
-# End of SecurityController's routes
+# End of LoginController's routes
 #--------------------------------------------------
 
 #--------------------------------------------------
