Removed all deprecation

--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -11,7 +11,7 @@ index:
 
 pages:
     path: /pages/{page}
-    controller: App\Controller\HomeController::pages
+    controller: App\Controller\HomeController::Pages
     defaults:
         page: 1
     requirements: 
@@ -19,7 +19,7 @@ pages:
 
 blog:
     path: /blog/{page}
-    controller: App\Controller\HomeController::blog
+    controller: App\Controller\HomeController::Blog
     defaults:
         page: 1
     requirements: 
@@ -27,7 +27,7 @@ blog:
 
 contact:
   path: /contact
-  controller: App\Controller\HomeController::contact
+  controller: App\Controller\HomeController::Contact
 
 #--------------------------------------------------
 # End of HomeController's routes
