--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,10 @@
 {
   "type": "project",
   "license": "proprietary",
+  "minimum-stability": "stable",
+  "prefer-stable": true,
   "require": {
-    "php": ">=7.2.5",
+    "php": ">=8.0.8",
     "ext-ctype": "*",
     "ext-iconv": "*",
     "composer/package-versions-deprecated": "^1.11",
@@ -11,34 +13,34 @@
     "doctrine/doctrine-migrations-bundle": "^3.0",
     "doctrine/orm": "^2.7",
     "phpdocumentor/reflection-docblock": "^5.2",
-    "sensio/framework-extra-bundle": "^5.1",
-    "symfony/asset": "5.4.*",
-    "symfony/console": "5.4.*",
-    "symfony/dotenv": "5.4.*",
-    "symfony/expression-language": "5.4.*",
-    "symfony/filesystem": "5.4.*",
+    "sensio/framework-extra-bundle": "^6.0.0",
+    "symfony/asset": "6.0.*",
+    "symfony/console": "6.0.*",
+    "symfony/dotenv": "6.0.*",
+    "symfony/expression-language": "6.0.*",
+    "symfony/filesystem": "6.0.*",
     "symfony/flex": "^1.11",
-    "symfony/form": "5.4.*",
-    "symfony/framework-bundle": "5.4.*",
-    "symfony/http-client": "5.4.*",
-    "symfony/intl": "5.4.*",
-    "symfony/mailer": "5.4.*",
-    "symfony/mime": "5.4.*",
+    "symfony/form": "6.0.*",
+    "symfony/framework-bundle": "6.0.*",
+    "symfony/http-client": "6.0.*",
+    "symfony/intl": "6.0.*",
+    "symfony/mailer": "6.0.*",
+    "symfony/mime": "6.0.*",
     "symfony/monolog-bundle": "^3.1",
-    "symfony/notifier": "5.4.*",
-    "symfony/process": "5.4.*",
-    "symfony/property-access": "5.4.*",
-    "symfony/property-info": "5.4.*",
-    "symfony/rate-limiter": "5.4.*",
-    "symfony/runtime": "5.4.*",
-    "symfony/security-bundle": "5.4.*",
-    "symfony/serializer": "5.4.*",
-    "symfony/string": "5.4.*",
-    "symfony/translation": "5.4.*",
+    "symfony/notifier": "6.0.*",
+    "symfony/process": "6.0.*",
+    "symfony/property-access": "6.0.*",
+    "symfony/property-info": "6.0.*",
+    "symfony/rate-limiter": "6.0.*",
+    "symfony/runtime": "6.0.*",
+    "symfony/security-bundle": "6.0.*",
+    "symfony/serializer": "6.0.*",
+    "symfony/string": "6.0.*",
+    "symfony/translation": "6.0.*",
     "symfony/twig-bundle": "^5.1",
-    "symfony/validator": "5.4.*",
-    "symfony/web-link": "5.4.*",
-    "symfony/yaml": "5.4.*",
+    "symfony/validator": "6.0.*",
+    "symfony/web-link": "6.0.*",
+    "symfony/yaml": "6.0.*",
     "twig/extra-bundle": "^2.12|^3.0",
     "twig/twig": "^2.12|^3.0"
   },
@@ -58,7 +60,11 @@
     "preferred-install": {
       "*": "dist"
     },
-    "sort-packages": true
+    "sort-packages": true,
+    "allow-plugins": {
+      "symfony/flex": true,
+      "symfony/runtime": true
+    }
   },
   "autoload": {
     "psr-4": {
@@ -97,7 +103,7 @@
   "extra": {
     "symfony": {
       "allow-contrib": false,
-      "require": "5.4.*"
+      "require": "6.0.*"
     }
   }
 }
